--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -3,21 +3,41 @@ on:
   pull_request:
     branches:
       - main
+
+permistions:
+  id-token: write
+  contents: read
+
 jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v3
-      
+
       - uses: actions/setup-node@v3
         with:
           node-version: 22.13.x
           cache: 'npm'
-        
+
       - name: install
-        run : npm ci
-      
+        run: npm ci
+
       - name: unit tests
         run: npm run test:unit
-      
+
+      - name: compile dist
+        run: npm run build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: ${{ secrets.S3_BUCKET_REGION }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/vue-app-uploader-role
+          role-session-name: Github_RecipeApp
+
+      - name: Check login
+        run: aws sts get-caller-identity
+
+      - name: Upload to S3
+        run: aws s3 sync ./dist s3://${{ secrets.S3_BUCKET }} --delete
