--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -1,41 +1,61 @@
 name: Buld & Deploy S3
 on:
+  push:
+    branches: [ "main", "develop", "release/test" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main", "develop", "release/test" ]
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
+  # Build and Test
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 22.13.x
+          cache: 'npm'
+      - name: install
+        run: npm ci
+      - name: compile dist
+        run: npm run build
+  
+  # Run Tests
   tests:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v3
-
-      - name: Crear .env para producción
+      - name: Create .env
         run: |
           echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
           echo "VITE_AWS_COGNITO_DOMAIN=${{ secrets.VITE_AWS_COGNITO_DOMAIN }}" >> .env
           echo "VITE_AWS_COGNITO_CLIENT_ID=${{ secrets.VITE_AWS_COGNITO_CLIENT_ID }}" >> .env
           echo "VITE_AWS_COGNITO_REDIRECT_URI=${{ secrets.VITE_AWS_COGNITO_REDIRECT_URI }}" >> .env
-
       - uses: actions/setup-node@v3
         with:
           node-version: 22.13.x
           cache: 'npm'
-
       - name: install
         run: npm ci
-
       - name: unit tests
         run: npm run test:unit
-
       - name: compile dist
         run: npm run build
-
+        
+  # Deploy to S3
+  # This job will only run on the main or release/test branches
+  deploy:
+    name: Deploy to S3
+    runs-on: ubuntu-latest
+    needs: tests
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/test'
+    steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
