--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -27,7 +27,28 @@ jobs:
   
   # Run Tests
   tests:
+    name: Run Tests
+    needs: build
     runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 22.13.x
+          cache: 'npm'
+      - name: install
+        run: npm ci
+      - name: unit tests
+        run: npm run test:unit
+
+  # Deploy to S3
+  # This job will only run on the main or release/test branches
+  deploy:
+    name: Deploy to S3
+    runs-on: ubuntu-latest
+    needs: tests
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/test'
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -47,24 +68,13 @@ jobs:
         run: npm run test:unit
       - name: compile dist
         run: npm run build
-        
-  # Deploy to S3
-  # This job will only run on the main or release/test branches
-  deploy:
-    name: Deploy to S3
-    runs-on: ubuntu-latest
-    needs: tests
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/test'
-    steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ${{ secrets.S3_BUCKET_REGION }}
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/vue-app-uploader-role
           role-session-name: Github_RecipeApp
-
       - name: Check login
         run: aws sts get-caller-identity
-
       - name: Upload to S3
         run: aws s3 sync ./dist s3://${{ secrets.S3_BUCKET }} --delete
