--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -48,8 +48,15 @@ jobs:
     name: Deploy to S3
     runs-on: ubuntu-latest
     needs: tests
+    environment: ${{ 
+        startsWith(github.ref, 'refs/heads/release/') && 'test' || 
+        github.ref == 'refs/heads/main' && 'prod' }}
+    env: 
+      S3_BUCKET: ${{secrets.S3_BUCKET}}
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/test'
     steps:
+      - name: Read secrets
+        run: echo "My S3 bucket is $S3_BUCKET"
       - name: checkout
         uses: actions/checkout@v3
       - name: Create .env
@@ -77,4 +84,4 @@ jobs:
       - name: Check login
         run: aws sts get-caller-identity
       - name: Upload to S3
-        run: aws s3 sync ./dist s3://${{ secrets.S3_BUCKET }} --delete
+        run: aws s3 sync ./dist s3://$S3_BUCKET --delete
