--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -53,6 +53,12 @@ jobs:
         github.ref == 'refs/heads/main' && 'prod' }}
     env: 
       S3_BUCKET: ${{secrets.S3_BUCKET}}
+      S3_BUCKET_REGION: ${{secrets.S3_BUCKET_REGION}}
+      AWS_ACCOUNT: ${{secrets.AWS_ACCOUNT}}
+      API_URL: ${{secrets.VITE_API_URL}}
+      AWS_COGNITO_DOMAIN: ${{secrets.VITE_AWS_COGNITO_DOMAIN}}
+      AWS_COGNITO_CLIENT_ID: ${{secrets.VITE_AWS_COGNITO_CLIENT_ID}}
+      AWS_COGNITO_REDIRECT_URI: ${{secrets.VITE_AWS_COGNITO_REDIRECT_URI}}
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/test'
     steps:
       - name: Read secrets
@@ -61,10 +67,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Create .env
         run: |
-          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
-          echo "VITE_AWS_COGNITO_DOMAIN=${{ secrets.VITE_AWS_COGNITO_DOMAIN }}" >> .env
-          echo "VITE_AWS_COGNITO_CLIENT_ID=${{ secrets.VITE_AWS_COGNITO_CLIENT_ID }}" >> .env
-          echo "VITE_AWS_COGNITO_REDIRECT_URI=${{ secrets.VITE_AWS_COGNITO_REDIRECT_URI }}" >> .env
+          echo "VITE_API_URL=$API_URL" >> .env
+          echo "VITE_AWS_COGNITO_DOMAIN=$AWS_COGNITO_DOMAIN" >> .env
+          echo "VITE_AWS_COGNITO_CLIENT_ID=$AWS_COGNITO_CLIENT_ID" >> .env
+          echo "VITE_AWS_COGNITO_REDIRECT_URI=$AWS_COGNITO_REDIRECT_URI" >> .env
       - uses: actions/setup-node@v3
         with:
           node-version: 22.13.x
@@ -78,8 +84,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-region: ${{ secrets.S3_BUCKET_REGION }}
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/vue-app-uploader-role
+          aws-region: $S3_BUCKET_REGION
+          role-to-assume: arn:aws:iam::$AWS_ACCOUNT:role/vue-app-uploader-role
           role-session-name: Github_RecipeApp
       - name: Check login
         run: aws sts get-caller-identity
