--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -84,8 +84,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-region: $S3_BUCKET_REGION
-          role-to-assume: arn:aws:iam::$AWS_ACCOUNT:role/vue-app-uploader-role
+          aws-region: ${{secrets.S3_BUCKET_REGION}}
+          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT}}:role/vue-app-uploader-role
           role-session-name: Github_RecipeApp
       - name: Check login
         run: aws sts get-caller-identity
