--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -5,7 +5,7 @@ on:
     branches: ['main']
   pull_request:
     branches: ['develop']
-    types: [opened, edited, reopened]
+    types: [opened, edited, reopened, synchronize]
 
 jobs:
   build:
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 21.0.x
+          node-version: 22.13.x
 
       - name: Setup Java (JDK 17)
         uses: actions/setup-java@v3
@@ -49,6 +49,14 @@ jobs:
         run: |
           quasar mode add capacitor
           quasar build -m capacitor -T android
+
+      - name: Make gradlew executable
+        run: chmod +x gradlew
+        working-directory: src-capacitor/android
+
+      - name: List files
+        run: ls -l
+        working-directory: src-capacitor/android
 
       # - name: Build unsigned APK
       #   working-directory: ./src-capacitor/android
