--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,13 +3,12 @@ name: Build APK (Signed)
 on:
   workflow_run:
     workflows: ['build&Test-apk']
-    types:
-      - completed
+    types: [completed]
 
 jobs:
   build-apk:
     name: Build APK
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     environment: ${{
       startsWith(github.ref, 'refs/heads/release/') && 'test' ||
