feat: Cambia al name que viene dentro del yml

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,7 +2,7 @@ name: Build APK (Signed)
 
 on:
   workflow_run:
-    workflows: ['build&Test-apk']
+    workflows: [Build & Test Apk]
     types: [completed]
 
 jobs:
