--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -1,7 +1,7 @@
 name: Buld & Deploy S3
 on:
   workflow_run:
-    workflows: ['build&Test-web']
+    workflows: [Build & Test Web App]
     types: [completed]
 
 permissions:
