test: Format types on workflows

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,7 +3,8 @@ name: Build APK (Signed)
 on:
   workflow_run:
     workflows: [Build & Test Apk]
-    types: [completed]
+    types:
+      - completed
 
 jobs:
   build-apk:
