--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -1,57 +1,25 @@
 name: Buld & Deploy S3
 on:
-  push:
-    branches: [ "main", "develop", "release/test" ]
-  pull_request:
-    branches: [ "main", "develop", "release/test" ]
+  workflow_run:
+    workflows: ['Build & Test Web App']
+    types:
+      - completed
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  # Build and Test
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 22.13.x
-          cache: 'npm'
-      - name: install
-        run: npm ci
-      - name: compile dist
-        run: npm run build
-  
-  # Run Tests
-  tests:
-    name: Run Tests
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 22.13.x
-          cache: 'npm'
-      - name: install
-        run: npm ci
-      - name: unit tests
-        run: npm run test:unit
-
   # Deploy to S3
   # This job will only run on the main or release/test branches
   deploy:
     name: Deploy to S3
     runs-on: ubuntu-latest
     needs: tests
-    environment: ${{ 
-        startsWith(github.ref, 'refs/heads/release/') && 'test' || 
-        github.ref == 'refs/heads/main' && 'prod' }}
-    env: 
+    environment: ${{
+      startsWith(github.ref, 'refs/heads/release/') && 'test' ||
+      github.ref == 'refs/heads/main' && 'prod' }}
+    env:
       S3_BUCKET: ${{secrets.S3_BUCKET}}
       S3_BUCKET_REGION: ${{secrets.S3_BUCKET_REGION}}
       AWS_ACCOUNT: ${{secrets.AWS_ACCOUNT}}
@@ -59,7 +27,7 @@ jobs:
       AWS_COGNITO_DOMAIN: ${{secrets.VITE_AWS_COGNITO_DOMAIN}}
       AWS_COGNITO_CLIENT_ID: ${{secrets.VITE_AWS_COGNITO_CLIENT_ID}}
       AWS_COGNITO_REDIRECT_URI: ${{secrets.VITE_AWS_COGNITO_REDIRECT_URI}}
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/test'
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release/test')
     steps:
       - name: Read secrets
         run: echo "My S3 bucket is $S3_BUCKET"
