--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -53,7 +53,8 @@ jobs:
       #- name: Add Capacitor Android
       #  run: |
       #    quasar mode add capacitor
-
+      - name: Check directory
+        run: ls
       - name: Make gradlew executable
         run: chmod +x gradlew
         working-directory: src-capacitor/android
