--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -69,7 +69,7 @@ jobs:
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             echo "⏳ Building DEBUG APK"
             ./gradlew assembleDebug
-            cp app/build/outputs/apk/debug/app-debug.apk ../../../app-debug.apk
+            cp app/build/outputs/apk/debug/app-debug.apk ../../app-debug.apk
           else
             echo "🔐 Recreating release keystore from secret"
             echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 -d > $KEYSTORE_FILE
@@ -86,12 +86,12 @@ jobs:
             echo "🔏 Signing APK"
             APKSIGNER="$ANDROID_SDK_ROOT/build-tools/34.0.0/apksigner"
             $APKSIGNER sign \
-              --ks ../../../$KEYSTORE_FILE \
+              --ks ../../$KEYSTORE_FILE \
               --ks-key-alias "$ALIAS" \
               --ks-pass pass:$KEYSTORE_PASSWORD \
               --key-pass pass:$KEY_PASSWORD \
-              --out ../../../app-release-signed.apk \
-              ../../../app-release-aligned.apk
+              --out ../../app-release-signed.apk \
+              ../../app-release-aligned.apk
           fi
 
       - name: Upload APK Artifact
